--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>e-commmerce</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+    <title>SHEIN</title>
     <link rel="stylesheet" href="./dist/menu/menu.css" />
     <link
       rel="stylesheet"
@@ -32,7 +33,7 @@
           <li class="item-link">
             <a href="cart.html" class="link">
               <i class="fa-solid fa-basket-shopping"></i>
-              <small class="cart-number">3</small>
+              <small class="cart-number">0</small>
             </a>
           </li>
         </ul>
