--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
         <div class="accordion-item">
           <div class="accordion-item-header">Informacion de envio</div>
           <div class="accordion-item-body">
-            <div class="accordion-item-body-content">
+            <p class="accordion-item-body-content">
               Si su paquete no ha sido entregado o su información de seguimiento
               muestra que su paquete ha sido entregado pero no lo ha recibido,
               debe ponerse en contacto con el servicio de atención al cliente
@@ -67,7 +67,7 @@
               puede verse afectada por los planes de vuelo, las condiciones
               meteorológicas y otros factores externos. Consulte la información
               de seguimiento para conocer la fecha de entrega más exacta.
-            </div>
+            </p>
           </div>
         </div>
         <div class="accordion-item">
@@ -75,11 +75,11 @@
             ¿De cuánto tiempo dispongo para hacer la devolución?
           </div>
           <div class="accordion-item-body">
-            <div class="accordion-item-body-content">
+            <p class="accordion-item-body-content">
               Aceptamos con gusto las devoluciones dentro de los primeros 30
               días siguientes a la compra, para la mayoría de los artículos en
               estado nuevo.
-            </div>
+            </p>
           </div>
         </div>
         <div class="accordion-item">
@@ -88,7 +88,7 @@
             han quitado las etiquetas?
           </div>
           <div class="accordion-item-body">
-            <div class="accordion-item-body-content">
+            <p class="accordion-item-body-content">
               1. Los artículos deben devolverse sin usar, sin lavar, sin dañar y
               con todas las etiquetas originales.
               <br />
@@ -115,13 +115,13 @@
               3. Si recibe un artículo dañado/defectuoso, póngase en contacto
               con el servicio de atención al cliente de SHEIN en un plazo de 24
               horas desde su recepción.
-            </div>
+            </p>
           </div>
         </div>
         <div class="accordion-item">
           <div class="accordion-item-header">¿Cómo recibiré mi reembolso?</div>
           <div class="accordion-item-body">
-            <div class="accordion-item-body-content">
+            <p class="accordion-item-body-content">
               Su solicitud será procesada en un plazo de 5 días hábiles después
               de recibir su devolución. El reembolso se efectuará en su monedero
               SHEIN o en la cuenta de pago original, según su solicitud.
@@ -129,13 +129,13 @@
               <b>Nota:</b>
               Los gastos de envío originales, los gastos de gestión y la
               garantía de envío no son reembolsables.
-            </div>
+            </p>
           </div>
         </div>
         <div class="accordion-item">
           <div class="accordion-item-header">¿Como realizar mi pedido?</div>
           <div class="accordion-item-body">
-            <div class="accordion-item-body-content">
+            <p class="accordion-item-body-content">
               Dirijase a la
               <a class="text-link" target="_blank" href="./store.html"
                 >tienda</a
@@ -146,7 +146,7 @@
                 >carrito</a
               >
               y seleccione el boton <b>Realizar Pedido</b>
-            </div>
+            </p>
           </div>
         </div>
       </div>
